--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^3.6.2",
     "ng2-charts": "^3.0.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
